--- a/user/config/site.yaml
+++ b/user/config/site.yaml
@@ -1,7 +1,16 @@
-title: Grav
+title: 'Haight Ashbury & Haight Ashbury Free Clinic Archives'
 author:
-  name: Joe Bloggs
-  email: 'joe@test.com'
+  name: 'Dr. Dave'
+  email: joe@test.com
+taxonomies:
+  - category
+  - tag
 metadata:
-    description: 'Grav is an easy to use, yet powerful, open source flat-file CMS'
-
+  description: 'Haight Ashbury &amp; Haight Ashbury Free Clinic Archives'
+summary:
+  enabled: true
+  format: short
+  size: 300
+  delimiter: '==='
+blog:
+  route: /blog
