--- a/user/config/plugins/breadcrumbs.yaml
+++ b/user/config/plugins/breadcrumbs.yaml
@@ -3,4 +3,4 @@ show_all: false
 built_in_css: false
 include_home: true
 icon_divider_classes: 'fa fa-angle-right'
-link_trailing: true
+link_trailing: false
